methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:2: error: Missing closing brace `}' assumed here
def hunt() {while (!estSurBiscuit()) {if (isFacingTrail()) {avance()};
^SlugHunting:2: error: expected class or object definition
def hunt() {while (!estSurBiscuit()) {if (isFacingTrail()) {avance()};
^